welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:2: error: not found: value False
while(estSurBiscuit==False){
                     ^Balin:5: error: not found: value True
while(estSurBiscuit==True){
                     ^